--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,34 @@
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Playfair Display", serif;
+}
+.first {
+  background: #f9f7fe;
+  text-align: center;
+  padding: 160px 20px;
+}
+.first p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
 h1 {
+  font-size: 96px;
+}
+.first h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+.btn-primary {
+  background: #6c63ff;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
 }
