--- a/styles/style.css
+++ b/styles/style.css
@@ -32,3 +32,32 @@ h1 {
   line-height: 27px;
   padding: 12px 20px;
 }
+h2 {
+  font-size: 64px;
+}
+p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+.description {
+  padding: 120px 60px;
+}
+@media (max-width: 960px) {
+  h1 {
+    font-size: 60px;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  h1 {
+    font-size: 44px;
+    line-height: 1.5;
+  }
+  .description {
+    padding: 0;
+    text-align: center;
+  }
+  .first {
+    padding: 80px 10px;
+  }
+}
