--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,22 @@ h1 {
   font-size: 24px;
   line-height: 2;
 }
+.about {
+  padding: 160px 20px;
+}
+
+.about-content {
+  margin: 30px;
+}
+.about h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about h2 {
+  font-size: 18px;
+  font-family: "poppins", sans-serif;
+  font-weight: bold;
+}
 .btn-primary {
   background: #6c63ff;
   border-radius: 4px;
@@ -43,9 +59,6 @@ p {
   padding: 120px 60px;
 }
 @media (max-width: 960px) {
-  h1 {
-    font-size: 60px;
-  }
   h2 {
     font-size: 44px;
   }
@@ -58,6 +71,10 @@ p {
     text-align: center;
   }
   .first {
-    padding: 80px 10px;
+    padding: 0;
+  }
+  .about {
+    padding: 0;
+    text-align: center;
   }
 }
