created the work page

--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,23 @@ p {
 .description {
   padding: 120px 60px;
 }
+.content {
+  padding: 120px 60px;
+}
+.content h3 {
+  font-size: 24px;
+  font-family: "poppins", sans-serif;
+  line-height: 1.5;
+  font-weight: bold;
+  margin: 20px 0 0;
+}
+.content p {
+  font-family: "poppins", sans-serif;
+  font-size: 14px;
+}
+.about p {
+  font-family: "poppins", sans-serif;
+}
 @media (max-width: 960px) {
   h2 {
     font-size: 44px;
