--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,9 @@ p {
 .content {
   padding: 120px 60px;
 }
+.content h1 {
+  font-size: 62px;
+}
 .content h3 {
   font-size: 24px;
   font-family: "poppins", sans-serif;
